<resources>
    <string name="app_name">SkyInv2</string>

    <!-- ACCUEIL -->
    <string name="game_title">Sky Invasion</string>
    <string name="poly">Polytech 2024</string>
    <string name="play">Play</string>
    <string name="highscore">Record :</string>

    <!-- Description imageview-->
    <string name="descr_back">Background</string>
    <string name="paused">Paused</string>
    <string name="continu">Continue</string>
    <string name="menu">Menu</string>

</resources>